[project]
name = "cleaning_engine"
version = "0.1.0"
description = "Data cleaning pipeline"
authors = [
  { name = "Abhishek Pathak", email = "abhishekpathak@raptorsupplies.com" }
]
dependencies = [
  "pandas>=1.5.0",
  "click>=8.1.0",
]

[project.optional-dependencies]
test = [
  "pytest",
  "mypy",
  "flake8",
  "black",
  "isort",
]

[build-system]
requires    = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"